# brunel_hand_ros

./: CMakeLists.txt  README.md  package.xml
examples/: toggle-fist.py
launch/: toggle_fist.launch
msg/: FingerPose.msg  HandPrimitive.msg  RawCommand.msg
src/: diagnostics.cpp  proxy.cpp
