<?xml version="1.0"?>
<package>
  <name>brunel_hand_ros</name>
  <version>0.0.0</version>
  <description>interface for the Brunel Hand (https://www.openbionics.com/shop/brunel-hand)</description>

  <maintainer email="scott@rerobots.net">Scott C. Livingston</maintainer>
  <author email="scott@rerobots.net">Scott C. Livingston</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <run_depend>serial</run_depend>

  <export>
  </export>
</package>
